# netcpu-monitor

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
src/: Makefile.am  client.c  client.h  connector.c  connector.h  monitor.c  monitor.h  netcpu-monitor.c  netcpu-monitor.h  server.c  server.h  stat.h  ui.c  ui.h  ui_cli.c  ui_cli.h  ui_ncurses.c  ui_ncurses.h  ui_oneshot.c  ui_oneshot.h
src/monitor/: mon_cpu_fanout.h  monitor.c
src/ui/: ui.c  ui.h  ui_cli.c  ui_ncurses.c  ui_oneshot.c
