AM_CFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/ui -I$(top_srcdir)/src//monitor
bin_PROGRAMS = netcpu-monitor
netcpu_monitor_SOURCES = src/client.c \
		 	 src/ui/ui.c \
		 	 src/ui/ui_cli.c \
		 	 src/ui/ui_ncurses.c \
		 	 src/ui/ui_oneshot.c \
		 	 src/monitor/monitor.c \
		 	 src/netcpu-monitor.c \
		 	 src/server.c \
		 	 src/connector.c
